# FlashDet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  test.py  test_all_overfit.py  test_training_methods.py  train.py  train_kd.py
.github/profile/: README.md
.github/workflows/: ci.yml  publish.yml
configs/: flashdet_m05x_320_coco.yaml  flashdet_m15x_320_coco.yaml  flashdet_m_320_coco.yaml  flashdet_m_320_kd.yaml  flashdet_m_320_lora.yaml  flashdet_m_416_coco.yaml  flashdet_n_320_coco.yaml  yolov10_s_640_coco.yaml  yolov11_s_640_coco.yaml  yolov8_s_640_coco.yaml  yolov9_s_640_coco.yaml  yolox_s_640_coco.yaml
currDATA/flashdet_nano_full_v2/: training_log.csv
currDATA/flashdet_pico_full_v2/: training_log.csv
currDATA/flashdet_small_full_v2/: training_log.csv
data/indoor/: train.cache
docker/: Dockerfile  docker-compose.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  FAQ.md  Home.md  Installation.md  LoRA-Fine-Tuning.md  Models.md  Quick-Start.md  Solutions.md  Trackers.md  Training.md
examples/: benchmark_model.py  count_objects.py  export_onnx.py  predict_image.py  track_objects.py  train_custom_dataset.py  train_with_lora.py
flashdet/: __init__.py  cli.py  registry.py
flashdet/analytics/: __init__.py  benchmark.py  dataset_stats.py  detection_analysis.py  flops.py  metrics.py  plots.py  profiler.py  report.py
flashdet/cfg/: __init__.py  config.py
flashdet/data/: __init__.py  augmentations.py  dataloader.py  dataset.py  download.py  prepare.py  transforms.py  verify_annotations.py
flashdet/engine/: __init__.py  callbacks.py  exporter.py  predictor.py  trainer.py
flashdet/losses/: __init__.py  chunked_loss.py  detr_loss.py  e2e_loss.py  kd_loss.py  rt_detr_loss.py  varifocal_loss.py  yolo_loss.py
flashdet/models/: __init__.py  detector.py
flashdet/nn/: __init__.py
flashdet/solutions/: __init__.py  _base.py  dwell_time.py  (+16 more)
scripts/: benchmark_all_yolo.py  benchmark_flashdet.py  check_scores.py  convert_pth_to_onnx.py  debug_detect.py  debug_recipe.py  debug_runtime.py  deep_debug.py  fp16_to_int8_quantize.py  prepare_data.py  sync_training.sh  train_active_learning.py  train_all_flashdet.sh  train_few_shot.py  train_kd.py  train_pico_v2.sh  train_semi_supervised.py  train_ssl.py  verify_fix.py  verify_gt_boxes.py
tests/: conftest.py  test_architectures.py  test_callbacks.py  test_comprehensive.py  test_models.py  test_new_components.py  test_registry.py  test_trackers.py  test_training.py  test_training_methods_deep.py  test_yolo26_components.py
(+146 files in other folders)
